build.log
[36mvite v5.4.21 [32mbuilding for production...[36m[39m
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/ACER/nurboo/client): [Error] Loading PostCSS Plugin failed: Cannot find module '../parser/plugins/jsx/xhtml'
Require stack:
- C:\Users\ACER\nurboo\node_modules\sucrase\dist\transformers\JSXTransformer.js
- C:\Users\ACER\nurboo\node_modules\sucrase\dist\util\getNonTypeIdentifiers.js
- C:\Users\ACER\nurboo\node_modules\sucrase\dist\CJSImportProcessor.js
- C:\Users\ACER\nurboo\node_modules\sucrase\dist\index.js
- C:\Users\ACER\nurboo\node_modules\tailwindcss\lib\lib\load-config.js
- C:\Users\ACER\nurboo\node_modules\tailwindcss\lib\lib\setupTrackingContext.js
- C:\Users\ACER\nurboo\node_modules\tailwindcss\lib\plugin.js
- C:\Users\ACER\nurboo\node_modules\tailwindcss\lib\index.js
- C:\Users\ACER\nurboo\client\postcss.config.js

(@C:\Users\ACER\nurboo\client\postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module '../parser/plugins/jsx/xhtml'
Require stack:
- C:\Users\ACER\nurboo\node_modules\sucrase\dist\transformers\JSXTransformer.js
- C:\Users\ACER\nurboo\node_modules\sucrase\dist\util\getNonTypeIdentifiers.js
- C:\Users\ACER\nurboo\node_modules\sucrase\dist\CJSImportProcessor.js
- C:\Users\ACER\nurboo\node_modules\sucrase\dist\index.js
- C:\Users\ACER\nurboo\node_modules\tailwindcss\lib\lib\load-config.js
- C:\Users\ACER\nurboo\node_modules\tailwindcss\lib\lib\setupTrackingContext.js
- C:\Users\ACER\nurboo\node_modules\tailwindcss\lib\plugin.js
- C:\Users\ACER\nurboo\node_modules\tailwindcss\lib\index.js
- C:\Users\ACER\nurboo\client\postcss.config.js

(@C:\Users\ACER\nurboo\client\postcss.config.js)
    at load (file:///C:/Users/ACER/nurboo/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///C:/Users/ACER/nurboo/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///C:/Users/ACER/nurboo/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///C:/Users/ACER/nurboo/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///C:/Users/ACER/nurboo/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v22.16.0
